# Mario_SunLand

./: .gitignore  CMakeLists.txt  README.md
assets/: config.json  save.json
assets/maps/: actor.tsj  level0.tmj  level1.tmj  level2.tmj  prop.tsj  tileset.tsj
src/: main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.cpp  animation_component.h  audio_component.cpp  audio_component.h  collider_component.cpp  collider_component.h  health_component.cpp  health_component.h  physics_component.cpp  physics_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/object/: game_object.cpp
src/engine/physics/: collider.h  collision.cpp  collision.h  physics_engine.cpp  physics_engine.h
src/engine/render/: animation.cpp  animation.h  camera.cpp  camera.h  render.cpp  render.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  level_loader.h  scene.cpp  scene.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h
(+49 files in other folders)
